--- a/staff/package.json
+++ b/staff/package.json
@@ -12,7 +12,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.1.2"
   },
   "jest": {
     "testEnvironment": "node",
