--- a/staff/package.json
+++ b/staff/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "rm staff.db && node ./bin/www",
     "test": "jest --coverage"
   },
   "dependencies": {
